--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       <div class="col-6">
         <ul>
           <li>
+         <strong>Precipitation:</strong> <span id="precipitation"></span> %
+          </li>
+          <li>
            <strong>Humidity:</strong> <span id="humidity"></span> %
           </li>
           <li>
