--- a/index.html
+++ b/index.html
@@ -63,35 +63,7 @@
           </li>
         </ul>
       </div>
-      <div class="text-center">
-        <div class="row row-cols-5">
-          <div class="col fs-4 fw-bold">Tues </br>
-            <img src="https://em-content.zobj.net/thumbs/320/mozilla/36/cloud_2601.png" alt="Cloudy">
-          </div>
-          <div class="col fs-4 fw-bold">Wed </br>
-            <img src="https://em-content.zobj.net/thumbs/240/joypixels/340/sun_2600-fe0f.png" alt="Sunny">
-          </div>
-          <div class="col fs-4 fw-bold">Thurs </br>
-            <img src="https://em-content.zobj.net/thumbs/240/joypixels/340/sun_2600-fe0f.png" alt="Sunny">
-          </div>
-          <div class="col fs-4 fw-bold">Fri </br>
-            <img src="https://em-content.zobj.net/thumbs/320/mozilla/36/cloud_2601.png" alt="Cloudy">
-          </div>
-          <div class="col fs-4 fw-bold">Sat </br>
-            <img src="https://em-content.zobj.net/thumbs/320/mozilla/36/cloud_2601.png" alt="Cloudy">
-
-          </div>
-        </div>
-
-        <div class="text-center">
-          <div class="row row-cols-5">
-            <div class="col fs-4 fw-bold">13°C</div>
-            <div class="col fs-4 fw-bold">19°C</div>
-            <div class="col fs-4 fw-bold">27°C</div>
-            <div class="col fs-4 fw-bold">11°C</div>
-            <div class="col fs-4 fw-bold">12°C</div>
-
-          </div>
+        <div class="weather-forecast" id="forecast"></div>
         </div>
       </div>
     </div>
